# k8rs

./: Cargo.toml  README.md  kind-cluster.yml  manifest.yaml
src/: main.rs
